--- a/style/css/style.css
+++ b/style/css/style.css
@@ -1,19 +1,39 @@
 
 body {
-    background-color: honeydew;
+    /* background */
+    /* background-image: url("https://assets.simpleviewinc.com/simpleview/image/upload/c_fill,h_600,q_75,w_1000/v1/clients/napavalley/Chappellet_Vineyard_Sunset_in_Fall_42eaa7cf-a1f1-4f6b-a260-b6890a6762db.jpg"); */
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: rgba(255,255,255,0.6);
+    background-blend-mode: lighten;  
+    /* end background */
+
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 400;
+    font-style: inherit;
+    letter-spacing: 0;
+    color: #303030;
+    margin: 0;
+    padding-bottom: 50px;
+    text-rendering: optimizeLegibility;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
 }
 
 footer {
     background-color: burlywood;
+    font-size: 17px;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 30px;
+    height: 50px;
 }
 
 .center {
     text-align: center;
+    font-family: 'Vidaloka', serif;
 }
 
 .container {
@@ -31,4 +51,8 @@ footer {
 .pink-background {
     background-color: deeppink;
     border-radius: 100px;
+}
+
+#left {
+    margin-left: 13px;
 }
